# smartsheet-repo

./: .flake8  .gitignore  DEPLOYMENT_GUIDE.md  GITHUB_DEPLOYMENT.md  Notes.txt  README.md  SUBMITTALS_INTEGRATION.md  SiteIds.json  WEBHOOK_DEDUPLICATION_SOLUTION.md  deploy-to-github.ps1  deploy-to-github.sh  get_refresh_token.py  pyproject.toml  requirements.txt  test_azure_function_debug.py  test_azure_function_token.py  test_current_webhook_behavior.py  test_delegated_auth.py  test_fixes.py  test_local_setup.py  test_onenote_name_sanitization.py  test_smartsheet_hyperlink.py  test_smartsheet_token.py  test_smartsheet_updater.py  test_smartsheet_webhook.py  test_submittals_integration.py  test_webhook_debug.py  test_webhook_deduplication.py  test_webhook_processing.py
.github/workflows/: ci-cd.yml  deploy-azure-function.yml  main_smartsheetsoldfunctions.yml
docs/: DEPLOYMENT.md  RUNBOOK.md
examples/: hyperlink_example.py
main/: __init__.py  function.json
scripts/: setup_template_mapping.py
src/: __init__.py  bvc_bot_auth.py  config.py  folder_manager.py  graph_client.py  onenote_manager.py  smartsheet_listener.py  smartsheet_updater.py  storage.py
tests/: __init__.py  test_config.py  test_graph_client.py
